ola-parser/src/testdata/syntaxTests/iceRegressionTests/calling_external_function_via_parameter_with_invalid_type.sol
contract C {
    fn f(
        fn() external -> (fn() internal) getCallback
    )  {
        getCallback();
    }
}
// ----
// TypeError 2582: (66-86): Internal type cannot be used for external fn type.
